5_services/kubia-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  selector:
    rel: debug
  ports:
  - port: 80
    targetPort: 8080
